Release 1.0.2 (not yet)

- Issue 181: Projection queries.
- Issue 174: New API: Context.call_on_commit().
- Issue 182: Add optional app and namespace args to get_by_id*().
- Issue 179: Rollback is a flow exception.
- Streamline the threaded test server creation.
- Fix docstring for get_entity_group_version().
- Transaction callback may be a tasklet in all propagation modes.

----------------------------------------

Release 1.0.1 (included in SDK 1.6.5)

- Support entity group metadata queries.
- Remove spurious '2' argument from json.dumps().
- Turn off caching for metadata queries.
- Issue 175: Add _creation_counter.
- Issue 169: Normalize incomplete keys.
- Issue 166: Make Key orderable.
- Issue 105: Use yield for memcache_cas() call in Context.get().
- Issue 168: Fix namespace for async queries.

----------------------------------------

Release 1.0 (included in SDK 1.6.4)

NDB has now reached status General Availability.

Changes since 0.9.9:

- Query operations can now pass use_cache=False (see issue 156 comment 7).
- There's now a separate TransactionOptions object.
- Add support for transaction propagation options (SDK 1.6.4).

----------------------------------------

Release 0.9.9

- Issue 164: Reduce log spam for exceptions in production.
- Issue 159: Make Model.__init__() signature more robust.
- Issue 163: String/TextProperty should not allow writing non-UTF-8 text.
- Issue 139: Enforce size limits for indexed text/blob properties.
- Issue 158: Support GenericProperty(compressed=True).
- Issue 156: Changed query cache policy (again).
- Issue 162: Raise an error on attempting to create a nested transaction.
- Issue 161: Make get_or_insert() use existing transaction if one exist.
- Fixed index_list() tests (were broken due to a last-minute runtime change).

----------------------------------------

Release 0.9.8 (included in SDK 1.6.3)

Final tweaks:

- Issue 149: Add get_indexes() API.
- Issue 152: Made @utils.wrapping() more robust.