@@ -1,6 +1,7 @@
 Release 1.0.2 (not yet)
 
 - Issue 181: Projection queries.
+- Issue 183: Fix mixin issue with polymodel.
 - Issue 174: New API: Context.call_on_commit().
 - Issue 182: Add optional app and namespace args to get_by_id*().
 - Issue 179: Rollback is a flow exception.
